--- a/package.json
+++ b/package.json
@@ -8,8 +8,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.6.0",
+    "@zeit/next-sass": "^1.0.1",
+    "clsx": "^1.1.0",
+    "draft-js": "^0.11.4",
+    "draft-js-code-editor-plugin": "^0.2.1",
+    "draft-js-export-html": "^1.4.1",
+    "draft-js-import-html": "^1.4.1",
+    "draft-js-inline-toolbar-plugin": "^3.0.1",
+    "draft-js-plugins-editor": "^3.0.0",
+    "draft-js-prism-plugin": "^0.1.3",
+    "draft-js-static-toolbar-plugin": "^3.0.1",
     "next": "9.2.2",
+    "next-redux-wrapper": "^5.0.0",
+    "node-sass": "^4.13.1",
+    "prismjs": "^1.19.0",
     "react": "16.13.0",
-    "react-dom": "16.13.0"
+    "react-dom": "16.13.0",
+    "react-no-ssr": "^1.1.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "sass": "^1.26.3",
+    "styled-components": "^5.0.1",
+    "uuid": "^7.0.2"
   }
 }
