--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.6.0",
     "@zeit/next-sass": "^1.0.1",
+    "classnames": "^2.2.6",
     "clsx": "^1.1.0",
     "draft-js": "^0.11.4",
     "draft-js-code-editor-plugin": "^0.2.1",
@@ -19,16 +20,24 @@
     "draft-js-plugins-editor": "^3.0.0",
     "draft-js-prism-plugin": "^0.1.3",
     "draft-js-static-toolbar-plugin": "^3.0.1",
+    "es6-promise": "^4.2.8",
+    "html-to-draftjs": "^1.5.0",
+    "immutability-helper": "^3.0.1",
+    "isomorphic-unfetch": "^3.0.0",
+    "lodash": "^4.17.15",
     "next": "9.2.2",
     "next-redux-wrapper": "^5.0.0",
     "node-sass": "^4.13.1",
     "prismjs": "^1.19.0",
     "react": "16.13.0",
+    "react-addons-update": "^15.6.2",
     "react-dom": "16.13.0",
     "react-no-ssr": "^1.1.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "sass": "^1.26.3",
     "styled-components": "^5.0.1",
     "uuid": "^7.0.2"
