--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.6.0",
     "@zeit/next-sass": "^1.0.1",
+    "async": "^3.2.0",
     "classnames": "^2.2.6",
     "clsx": "^1.1.0",
     "draft-js": "^0.11.4",
