--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "devc": "node pages/api/server.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
@@ -13,6 +14,7 @@
     "async": "^3.2.0",
     "classnames": "^2.2.6",
     "clsx": "^1.1.0",
+    "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.4",
     "draft-js-code-editor-plugin": "^0.2.1",
@@ -27,15 +29,21 @@
     "immutability-helper": "^3.0.1",
     "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.15",
+    "micro-redirect": "^1.0.2",
     "next": "9.2.2",
+    "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^5.0.0",
     "node-sass": "^4.13.1",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
+    "passport-local": "^1.0.0",
     "prismjs": "^1.19.0",
-    "react": "16.13.0",
+    "react": "^16.13.0",
     "react-addons-update": "^15.6.2",
     "react-dom": "16.13.0",
     "react-no-ssr": "^1.1.0",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
@@ -43,5 +51,10 @@
     "sass": "^1.26.3",
     "styled-components": "^5.0.1",
     "uuid": "^7.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.27",
+    "@types/react": "^16.9.43",
+    "typescript": "^3.9.7"
   }
 }
