--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.15",
     "micro-redirect": "^1.0.2",
-    "next": "9.2.2",
+    "next": "^9.5.1",
     "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^5.0.0",
     "node-sass": "^4.13.1",
@@ -38,9 +38,9 @@
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "prismjs": "^1.19.0",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
-    "react-dom": "16.13.0",
+    "react-dom": "^16.13.1",
     "react-no-ssr": "^1.1.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
