--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "async": "^3.2.0",
     "classnames": "^2.2.6",
     "clsx": "^1.1.0",
+    "connect-redis": "^5.0.0",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.4",
@@ -25,6 +26,7 @@
     "draft-js-prism-plugin": "^0.1.3",
     "draft-js-static-toolbar-plugin": "^3.0.1",
     "es6-promise": "^4.2.8",
+    "express-session": "^1.17.1",
     "html-to-draftjs": "^1.5.0",
     "immutability-helper": "^3.0.1",
     "isomorphic-unfetch": "^3.0.0",
@@ -38,12 +40,15 @@
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "prismjs": "^1.19.0",
+    "quill-image-resize-module": "^3.0.0",
     "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.13.1",
     "react-no-ssr": "^1.1.0",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "redis": "^3.0.2",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
