--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "draft-js-static-toolbar-plugin": "^3.0.1",
     "es6-promise": "^4.2.8",
     "express-session": "^1.17.1",
+    "highlight.js": "^10.1.2",
     "html-to-draftjs": "^1.5.0",
     "immutability-helper": "^3.0.1",
     "isomorphic-unfetch": "^3.0.0",
+    "katex": "^0.12.0",
     "lodash": "^4.17.15",
     "micro-redirect": "^1.0.2",
     "next": "^9.5.1",
+    "next-compose-plugins": "^2.2.0",
     "next-cookies": "^2.0.3",
     "next-redux-wrapper": "^5.0.0",
     "node-sass": "^4.13.1",
