--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@elastic/elasticsearch": "^7.6.0",
     "@zeit/next-sass": "^1.0.1",
     "async": "^3.2.0",
+    "aws-sdk": "^2.738.0",
     "classnames": "^2.2.6",
     "clsx": "^1.1.0",
     "connect-redis": "^5.0.0",
@@ -27,6 +28,7 @@
     "draft-js-static-toolbar-plugin": "^3.0.1",
     "es6-promise": "^4.2.8",
     "express-session": "^1.17.1",
+    "formidable": "^1.2.2",
     "highlight.js": "^10.1.2",
     "html-to-draftjs": "^1.5.0",
     "immutability-helper": "^3.0.1",
@@ -43,7 +45,10 @@
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "prismjs": "^1.19.0",
+    "quill-better-table": "^1.2.10",
     "quill-image-resize-module": "^3.0.0",
+    "quill-image-uploader": "^1.2.2",
+    "quill-table": "^1.0.0",
     "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.13.1",
@@ -61,8 +66,8 @@
     "uuid": "^7.0.2"
   },
   "devDependencies": {
-    "@types/node": "^14.0.27",
-    "@types/react": "^16.9.43",
-    "typescript": "^3.9.7"
+    "@types/node": "^14.6.0",
+    "@types/react": "^16.9.47",
+    "typescript": "^4.0.2"
   }
 }
