--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-no-ssr": "^1.1.0",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
