--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "draft-js-plugins-editor": "^3.0.0",
     "draft-js-prism-plugin": "^0.1.3",
     "draft-js-static-toolbar-plugin": "^3.0.1",
+    "emotion": "^10.0.27",
     "es6-promise": "^4.2.8",
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
     "highlight.js": "^10.1.2",
     "html-to-draftjs": "^1.5.0",
     "immutability-helper": "^3.0.1",
+    "is-hotkey": "^0.1.6",
     "isomorphic-unfetch": "^3.0.0",
     "katex": "^0.12.0",
     "lodash": "^4.17.15",
@@ -52,6 +54,7 @@
     "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-loader-spinner": "^3.1.14",
     "react-no-ssr": "^1.1.0",
     "react-quill": "^1.3.5",
@@ -63,6 +66,10 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "sass": "^1.26.3",
+    "slate": "^0.58.4",
+    "slate-history": "^0.58.4",
+    "slate-hyperscript": "^0.58.4",
+    "slate-react": "^0.58.4",
     "styled-components": "^5.0.1",
     "uuid": "^7.0.2"
   },
