--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.6.0",
+    "@material-ui/core": "^4.11.0",
     "@zeit/next-sass": "^1.0.1",
     "async": "^3.2.0",
     "aws-sdk": "^2.738.0",
@@ -32,8 +33,10 @@
     "formidable": "^1.2.2",
     "highlight.js": "^10.1.2",
     "html-to-draftjs": "^1.5.0",
+    "image-extensions": "^1.1.0",
     "immutability-helper": "^3.0.1",
     "is-hotkey": "^0.1.6",
+    "is-url": "^1.2.4",
     "isomorphic-unfetch": "^3.0.0",
     "katex": "^0.12.0",
     "lodash": "^4.17.15",
