--- a/package.json
+++ b/package.json
@@ -19,14 +19,6 @@
     "connect-redis": "^5.0.0",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
-    "draft-js": "^0.11.4",
-    "draft-js-code-editor-plugin": "^0.2.1",
-    "draft-js-export-html": "^1.4.1",
-    "draft-js-import-html": "^1.4.1",
-    "draft-js-inline-toolbar-plugin": "^3.0.1",
-    "draft-js-plugins-editor": "^3.0.0",
-    "draft-js-prism-plugin": "^0.1.3",
-    "draft-js-static-toolbar-plugin": "^3.0.1",
     "emotion": "^10.0.27",
     "es6-promise": "^4.2.8",
     "express-session": "^1.17.1",
@@ -50,17 +42,12 @@
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "prismjs": "^1.19.0",
-    "quill-better-table": "^1.2.10",
-    "quill-image-resize-module": "^3.0.0",
-    "quill-image-uploader": "^1.2.2",
-    "quill-table": "^1.0.0",
     "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-loader-spinner": "^3.1.14",
     "react-no-ssr": "^1.1.0",
-    "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redis": "^3.0.2",
@@ -70,6 +57,8 @@
     "redux-saga": "^1.1.3",
     "sass": "^1.26.3",
     "slate": "^0.58.4",
+    "slate-drop-or-paste-images": "^0.9.1",
+    "slate-edit-code": "^0.15.5",
     "slate-history": "^0.58.4",
     "slate-hyperscript": "^0.58.4",
     "slate-react": "^0.58.4",
@@ -79,6 +68,8 @@
   "devDependencies": {
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.47",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^1.9.4",
     "typescript": "^4.0.2"
   }
 }
