--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-no-ssr": "^1.1.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-select": "^3.1.0",
     "redis": "^3.0.2",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
