--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "es6-promise": "^4.2.8",
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
-    "highlight.js": "^10.1.2",
+    "highlight.js": "^10.5.0",
     "html-to-draftjs": "^1.5.0",
     "image-extensions": "^1.1.0",
     "immutability-helper": "^3.0.1",
@@ -45,12 +45,14 @@
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "prismjs": "^1.19.0",
+    "quill": "^1.3.7",
     "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-loader-spinner": "^3.1.14",
     "react-no-ssr": "^1.1.0",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
