--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.13.1",
+    "react-hotkeys": "^2.0.0",
     "react-icons": "^3.11.0",
     "react-loader-spinner": "^3.1.14",
     "react-no-ssr": "^1.1.0",
